--- a/docker/docker/manifest.tmpl
+++ b/docker/docker/manifest.tmpl
@@ -1,4 +1,4 @@
-image: plugins/docker:buildx-{{#if build.tag}}{{trimPrefix "v" build.tag}}{{else}}latest{{/if}}
+image: plugins/docker:20.17.2
 {{#if build.tags}}
 tags:
 {{#each build.tags}}
@@ -7,24 +7,24 @@ tags:
 {{/if}}
 manifests:
   -
-    image: plugins/docker:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}buildx-linux-amd64
+    image: plugins/docker:20.17.2-linux-amd64
     platform:
       architecture: amd64
       os: linux
   -
-    image: plugins/docker:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}buildx-linux-arm64
+    image: plugins/docker:20.17.2-linux-arm64
     platform:
       architecture: arm64
       os: linux
       variant: v8
   -
-    image: plugins/docker:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}buildx-windows-1809-amd64
+    image: plugins/docker:20.17.2-windows-1809-amd64
     platform:
       architecture: amd64
       os: windows
       version: 1809
   -
-    image: plugins/docker:{{#if build.tag}}{{trimPrefix "v" build.tag}}-{{/if}}buildx-windows-ltsc2022-amd64
+    image: plugins/docker:20.17.2-windows-ltsc2022-amd64
     platform:
       architecture: amd64
       os: windows
